--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
+    "grunt-git-describe": "^2.3.2",
+    "grunt-gitinfo": "^0.1.7",
     "grunt-google-cdn": "^0.4.3",
+    "grunt-htmlrefs": "^0.5.0",
     "grunt-jscs": "^1.8.0",
     "grunt-karma": "*",
     "grunt-newer": "^1.1.0",
@@ -26,12 +29,16 @@
     "grunt-postcss": "^0.5.5",
     "grunt-processhtml": "^0.3.10",
     "grunt-svgmin": "^2.0.0",
+    "grunt-text-replace": "^0.4.0",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "jasmine-core": "*",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
-    "karma-jasmine": "*",
-    "karma-phantomjs-launcher": "*",
+    "karma": "^0.13.0",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.4",
     "time-grunt": "^1.0.0"
   },
   "engines": {
